--- a/src/app/feature-modules/user/home-con/home-page/home-page.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/home-page.component.html
@@ -50,6 +50,10 @@
           <div class="container">
             <div class="row">
               <div class="com-con">
+                <div class="comen-form">
+                  <textarea class="form-control form-control-sm" placeholder="Add a comment ... "></textarea>
+                  <button class="btn btn-sm btn-outline-success p-btn">post</button>
+                </div>
                 <div class="comen">
                   <div class="com-p-c-c">
                     <div class="com-p-c bcimg" style="background-image: url('./assets/images/profile3.jpg')">
