--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -7,6 +7,7 @@
     <!--style="background-image: url('./assets/images/background2.jpg'); height: 800px"-->
   </div>
   <div class="p-con-c">
+
     <div class="container ">
       <div class=" row">
         <div class="col-6 p-l-8">
@@ -27,11 +28,11 @@
               <i class="fa fa-ellipsis-v"></i>
             </div>
             <div class="a-con" (click)="like()">
-              <div class="value">{{post?.likes?.length || 0}}</div>
+              <div class="value">{{likeCount || ''}}</div>
               <i class="fa fa-heart" [ngClass]="{'liked': isLiked}"></i>
             </div>
-            <div class="a-con">
-              <div class="value">{{post?.comments?.length || 0}}</div>
+            <div class="a-con" (click)="toggleComment()">
+              <div class="value">{{commentCount || ''}}</div>
               <i class="fa fa-comment"></i>
             </div>
 
@@ -39,21 +40,31 @@
         </div>
       </div>
     </div>
-    <div class="container">
+
+    <div class="container" *ngIf="isCommentShown">
       <div class="row">
         <div class="com-con">
-          <div class="comen" *ngFor="let c of post?.comments; let i = index;">
+          <form class="comen-form" [formGroup]="commentForm" (submit)="postComment()">
+            <textarea class="form-control form-control-sm"
+                      placeholder="Add a comment ... "
+                      formControlName="comment"></textarea>
+            <button type="submit" [disabled]="commentForm.invalid"
+                    class="btn btn-sm btn-outline-success p-btn">post
+            </button>
+          </form>
+          <div class="comen" *ngFor="let c of comments; let i = index;">
             <div class="com-p-c-c">
-              <div class="com-p-c bcimg">
+              <div class="com-p-c bcimg" style="background-image: url('./assets/images/profile3.jpg')">
+
               </div>
             </div>
 
             <div class="com-t-c">
               <div class="p-n-c">
                 <p class="name">Daniel Solomon</p>
-                <p class="more">1 hour ago</p>
+                <p class="more">{{c.postedDate |  date:'MMM d, y, h:mm a'}}</p>
               </div>
-              <p>{{c.content}}</p>
+              <p>{{c?.content}}</p>
             </div>
           </div>
 
@@ -63,3 +74,25 @@
 
   </div>
 </div>
+
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="com-con">-->
+<!--<div class="comen" *ngFor="let c of post?.comments; let i = index;">-->
+<!--<div class="com-p-c-c">-->
+<!--<div class="com-p-c bcimg">-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<div class="com-t-c">-->
+<!--<div class="p-n-c">-->
+<!--<p class="name">Daniel Solomon</p>-->
+<!--<p class="more">1 hour ago</p>-->
+<!--</div>-->
+<!--<p>{{c.content}}</p>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
