--- a/src/app/feature-modules/user/home-con/home-page/home-page.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/home-page.component.html
@@ -63,10 +63,10 @@
 
                   <div class="com-t-c">
                     <div class="p-n-c">
-                      <p class="name">Daniel Solomon</p>
+                      <p class="name">Daniel Solomon</p><p>Wow that looks really great. Hit me up when you go hiking another time. </p>
                       <p class="more">1 hour ago</p>
                     </div>
-                    <p>Wow that looks really great. Hit me up when you go hiking another time. </p>
+
                   </div>
                 </div>
                 <div class="comen">
