--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -337,7 +337,7 @@ $ppw: 36px;
       }
       .more {
         font-size: 9px;
-        margin-left: 5px;
+        //margin-left: 5px;
         line-height: 18px;
         color: #818181;
       }
