--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -1,4 +1,9 @@
 <div class="post">
+
+  <div class="cap-b" *ngIf="post?.content != null">
+    <p>{{post?.content}}</p>
+  </div>
+
   <div class="c-c">
     <div class="p-c bcimg"
          [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + post.featuredImage + ')' , 'height':'800px'}">
@@ -54,8 +59,11 @@
             </button>
           </form>
 
-          <div   *ngFor="let c of comments; let i = index;">
-            <app-comment [comment]="c" ></app-comment>
+          <div *ngFor="let c of comments; let i = index;">
+            <app-comment [comment]="c"
+                         [account]="account"
+                         [idx]="i"
+                         (removeComment)="removeComment($event)"></app-comment>
           </div>
 
         </div>
