--- a/src/app/feature-modules/user/home-con/home-page/comment/comment.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/comment/comment.component.html
@@ -15,19 +15,19 @@
 
   </div>
 
-  <div class="a-con more" *ngIf="showMoreButton">
+  <!--<div class="a-con more" *ngIf="showMoreButton">-->
 
-    <ul class="nav align-items-center d-md-none">
-      <li class="nav-item dropdown m-auto" dropdown placement="bottom-right">
+    <!--<ul class="nav align-items-center d-md-none">-->
+      <!--<li class="nav-item dropdown m-auto" dropdown placement="bottom-right">-->
 
-        <i class="fa fa-ellipsis-v" dropdownToggle></i>
-        <div class="dropdown-menu-arrow dropdown-menu-right dropdown-menu" *dropdownMenu x-placement="bottom-right">
-          <div class=" dropdown-header noti-title">
-            <h6 class="text-overflow m-0" (click)="delete()">DELETE</h6>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
+        <!--<i class="fa fa-ellipsis-v" dropdownToggle></i>-->
+        <!--<div class="dropdown-menu-arrow dropdown-menu-right dropdown-menu" *dropdownMenu x-placement="bottom-right">-->
+          <!--<div class=" dropdown-header noti-title">-->
+            <!--<h6 class="text-overflow m-0" (click)="delete()">DELETE</h6>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</li>-->
+    <!--</ul>-->
+  <!--</div>-->
 
 </div>
