--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -98,14 +98,16 @@
     margin-bottom: 0;
   }
 }
+
 .tags-con {
   margin-bottom: 8px;
-  &.ht{
+  &.ht {
     overflow: auto;
     white-space: nowrap;
     width: 700px;
   }
 }
+
 .tags {
   display: inline-block;
   border-radius: 21px;
@@ -130,6 +132,7 @@
     padding: 5px;
   }
 }
+
 .hashtags-con {
   @extend .clearfix;
   padding: 10px;
@@ -139,30 +142,34 @@
     margin-right: 10px;
   }
 }
+
 .i-b {
   width: 150px;
   height: 150px;
   border-radius: 10px;
 }
-.tag-l-c{
+
+.tag-l-c {
   position: absolute;
   right: 30px;
   bottom: 8px;
 }
-.cap-b{
+
+.cap-b {
   background-color: #2b2e3f;
   color: #fff;
   padding: 10px;
-  p{
+  p {
     margin-bottom: 0;
   }
 }
-.big-c-c{
+
+.big-c-c {
   position: absolute;
   left: 42%;
   bottom: 34px;
-  .c{
-    i{
+  .c {
+    i {
       font-size: 27px;
       transform: rotate(-30deg);
     }
@@ -176,21 +183,181 @@
   }
 }
 
-
-.fc0{
+.fc0 {
   font-size: 15px !important;
 }
-.fc1{
+
+.fc1 {
   font-size: 18px !important;
 }
-.fc2{
+
+.fc2 {
   font-size: 21px !important;
 }
-.fc3{
+
+.fc3 {
   font-size: 24px !important;
 }
 
-.pa{
+.pa {
   color: #fff;
   margin: 10px;
+}
+
+.p-r-c {
+  text-align: center;
+  .card {
+    margin: 10px 10px 32px;
+    background-color: #f5f5f5;
+    .card-body {
+      padding: 9px;
+    }
+  }
+}
+
+.p-r {
+  position: relative;
+  .l-c {
+    position: absolute;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    width: 100%;
+    padding-top: 178px;
+  }
+}
+
+.pu-c {
+  //padding: 10px;
+  .bc-c {
+    float: left;
+    margin: 3px;
+  }
+}
+
+.bc-c {
+  width: 28px;
+  height: 28px;
+  border-radius: 14px;
+}
+
+.wb {
+  border: 1px solid #cecece;
+}
+
+.ww {
+  background-color: #fff;
+
+}
+
+.gg {
+  background-color: #bababa;
+  color: #fff;
+}
+
+.bb {
+  background-color: #000;
+  color: #fff;
+}
+
+.dg {
+  background-color: #0fbf76;
+  color: #fff;
+}
+
+.lb {
+  background-color: #8fe3ff;
+  //color: #fff;
+}
+
+.db {
+  background-color: #62b4ff;
+  color: #fff;
+}
+
+.dp {
+  background-color: #a985cb;
+  color: #fff;
+}
+
+.grn {
+  background-color: #87d55d;
+  color: #fff;
+}
+
+//&.yellow{
+//  background-color: #fef54e;
+//}
+.yy {
+  background-color: #fff889;
+  border: 1px solid #ccc66e;
+}
+
+.rr {
+  background-color: #fe4646;
+  color: #fff;
+}
+.dr {
+  background-color: #ba3040;
+  color: #fff;
+}
+.bb {
+  background-color: #a78a6c;
+}
+.pp {
+  background-color: #fec3f5;
+}
+.do {
+  background-color: #e6ae05;
+  color: #fff;
+}
+.oo {
+  background-color: #ffd32d;
+}
+.p-t-c {
+  padding: 10px;
+  font-style: italic;
+  color: #c1c1c1;
+  @extend .clearfix;
+  p {
+    margin-bottom: 0;
+    float: left;
+    margin-right: 10px;
+  }
+}
+.e-m {
+  padding: 5px;
+  p {
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+}
+.s-m-c {
+  .col{
+    width: 33%;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  select{
+    border: none;
+    border-radius: 0;
+  }
+  .f{
+    border-bottom: 5px solid #665eff;;
+  }
+  .s{
+    border-bottom: 5px solid #5773ff
+  }
+  .l{
+    border-bottom: 5px solid #3acce1
+  }
+}
+
+
+.a-r-c{
+  padding: 20px;
+  p{
+    font-size: 23px;
+  }
 }
